[gd_scene load_steps=4 format=3 uid="uid://bp1rnk337qtq"]

[ext_resource type="Script" uid="uid://csrytikjaw7yd" path="res://menus/lobby_menu/lobby_menu.gd" id="1_006ha"]
[ext_resource type="PackedScene" uid="uid://r4atrle53fob" path="res://menus/lobby_menu/lobby_entry.tscn" id="2_urr6r"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_urr6r"]
properties/0/path = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayerCount:text")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_006ha")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lobby"

[node name="PlayerCount" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 4"

[node name="PlayerList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="LobbyEntry" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList" instance=ExtResource("2_urr6r")]
layout_mode = 2

[node name="LobbyEntry2" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList" instance=ExtResource("2_urr6r")]
layout_mode = 2
player_name = "Player 2"

[node name="LobbyEntry3" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList" instance=ExtResource("2_urr6r")]
layout_mode = 2
player_name = "Player 3"

[node name="LobbyEntry4" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList" instance=ExtResource("2_urr6r")]
layout_mode = 2
player_name = "Player 4"

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://r4atrle53fob")
spawn_path = NodePath("../PanelContainer/MarginContainer/VBoxContainer/PlayerList")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_urr6r")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
